--- a/.config/polybar/master.conf
+++ b/.config/polybar/master.conf
@@ -7,20 +7,21 @@
 background = #D91E2021
 foreground = #C1C1C1
 border     = #525254
-blue       = #1E1E96
-green      = #1F991F
-yellow     = #99991F
-orange     = #996E1F
-red        = #991F1F
-urgent     = #E03043
-pink       = #E55C74
 purple     = #801980
+blue       = #1E1E96
 cyan       = #008B8B
-dimyellow  = #9C9B89
-dimgray    = #818182
+green      = #1F991F
+dimgreen   = #576657
+yellow     = #CDCD00
+dimyellow  = #B0AC6A
+orange     = #CD8500
+red        = #991F1F
+pink       = #E55C74
+urgent     = #E03043
 white      = #F8F8FF
 black      = #2F2F2F
 gray       = #D3D3D3
+dimgray    = #818182
 wsbackground = #67789E
 tint2bk      = #D9212121
 
@@ -53,7 +54,7 @@ monitor-fallback = LVDS
 monitor-strict = false
 
 width              = 100%
-height             = 24
+height             = 20
 border-size        = 0
 border-top-size    = 0
 border-bottom-size = 1
@@ -85,11 +86,12 @@ click-middle = pkill -USR1 -x polybar
 ;double-click-middle =
 ;double-click-right =
 
-font-0 = "Fira Code:size=10:antialias=true;2"
-font-1 = "Noto Mono:size=10:antialias=true;2"
-font-2 = "DejaVu Sans:size=10:antialias=true;2"
-font-3 = "mononoki Nerd Font:size=10:antialias=true;2"
-font-4 = "Anonymice Nerd Font:size=10:antialias=true;2"
+font-0 = "Fira Code:style=regular:size=10:antialias=true:hintstyle=slight;2"
+font-1 = "Iosevka Term SS10:style=medium:size=10:antialias=true;2"
+font-2 = "SF Mono:style=regular:size=10:antialias=true;2"
+font-3 = "Roboto Mono:size=10:antialias=true;2"
+font-4 = "mononoki Nerd Font:size=8:antialias=true;2"
+font-5 = "Anonymice Nerd Font:size=8:antialias=true;2"
 
 [global/wm]
 ; Adjust the _NET_WM_STRUT_PARTIAL top value
