--- a/.config/polybar/modules.conf
+++ b/.config/polybar/modules.conf
@@ -11,19 +11,19 @@ pin-workspaces = false
 enable-click = true
 enable-scroll = false
 format-padding = 0
-icon-0 = 1;
+icon-0 = 1;
 icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-5 = 6;
-icon-6 = 7;
-icon-7 = 8;
-icon-8 = 9;
-icon-9 = 10;
+icon-2 = 3;
+icon-3 = 4;
+icon-4 = 5;
+icon-5 = 6;
+icon-6 = 7;
+icon-7 = 8;
+icon-8 = 9;
+icon-9 = 10;
 icon-default =
 format = <label-state>
-label-active = "  %name%  "
+label-active = " %name% "
 label-active-foreground = ${colors.foreground}
 label-active-background = ${colors.wsbackground}
 label-active-underline = ${colors.wsbackground}
@@ -303,14 +303,14 @@ format = <label>
 ;;   jgmenu  ;;
 ;;;;;;;;;;;;;;;
 [module/jgmenu]
-type          = custom/script
+type = custom/script
 format-background = ${colors.background}
 format-foreground = ${colors.foreground}
 label         = %output%
 label-padding = 2
 interval      = 10
 exec          = echo ""
-click-left    = jgmenu --config-file=/home/doug/.config/jgmenu/pbarmenurc
+click-left    = jgmenu --config-file=/home/doug/.config/jgmenu/pbmenurc
 
 ;;;;;;;;;
 ;; CPU ;;
@@ -388,7 +388,7 @@ interval = 3
 ;   <bar-load>
 ;   <ramp-load>
 ;   <ramp-coreload>
-format = "<label>  <bar-load>"
+format = "<label> <bar-load>"
 
 format-padding = 0
 format-background = ${colors.background}
@@ -420,27 +420,25 @@ ramp-coreload-7-foreground = ${colors.urgent}
 ramp-load-0 = 
 ramp-load-0-foreground = ${colors.foreground}
 ramp-load-1 = 
-ramp-load-1-foreground = ${colors.foreground}
+ramp-load-1-foreground = ${colors.cyan}
 ramp-load-2 = 
 ramp-load-2-foreground = ${colors.green}
 ramp-load-3 = 
-ramp-load-3-foreground = ${colors.green}
+ramp-load-3-foreground = ${colors.yellow}
 ramp-load-4 = 
-ramp-load-4-foreground = ${colors.yellow}
+ramp-load-4-foreground = ${colors.orange}
 ramp-load-5 = 
-ramp-load-5-foreground = ${colors.yellow}
+ramp-load-5-foreground = ${colors.red}
 ramp-load-6 = 
-ramp-load-6-foreground = ${colors.pink}
-ramp-load-7 = 
-ramp-load-7-foreground = ${colors.urgent}
+ramp-load-6-foreground = ${colors.urgent}
 
 ; Only applies if <bar-used> is used
 bar-load-indicator =
 bar-load-width = 6
-bar-load-foreground-0 = #576657
-bar-load-foreground-1 = #576657
-bar-load-foreground-2 = #2C912C
-bar-load-foreground-3 = ${colors.yellow}
+bar-load-foreground-0 = ${colors.dimgreen}
+bar-load-foreground-1 = ${colors.dimgreen}
+bar-load-foreground-2 = ${colors.dimyellow}
+bar-load-foreground-3 = ${colors.orange}
 bar-load-foreground-4 = ${colors.urgent}
 bar-load-fill = ▐
 bar-load-empty = ▐
@@ -471,7 +469,7 @@ thermal-zone = 0
 ; $ for i in /sys/class/hwmon/hwmon*/temp*_input; do echo "$(<$(dirname $i)/name): $(cat ${i%_*}_label 2>/dev/null || echo $(basename ${i%_*})) $(readlink -f $i)"; done
 ; to find path to desired file
 ; Default reverts to thermal zone setting
-#hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input
+# hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input
 # hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon0/temp1_input
 hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp1_input
 
@@ -484,20 +482,13 @@ ramp-0-foreground = ${colors.foreground}
 ramp-1 = ""
 ramp-1-foreground = ${colors.foreground}
 ramp-2 = ""
-ramp-3-foreground = ${colors.foreground}
+ramp-2-foreground = ${colors.dimgreen}
 ramp-3 = ""
-ramp-4-foreground = ${colors.foreground}
+ramp-3-foreground = ${colors.dimgreen}
 ramp-4 = ""
-ramp-5-foreground = #576657
+ramp-4-foreground = ${colors.dimyellow}
 ramp-5 = ""
-ramp-6-foreground = ${colors.green}
-ramp-6 = ""
-ramp-7-foreground = ${colors.dimyellow}
-ramp-7 = ""
-ramp-8-foreground = ${colors.yellow}
-ramp-8 = ""
-ramp-9-foreground = ${colors.urgent}
-ramp-9 = ""
+ramp-5-foreground = ${colors.urgent}
 
 format = "<ramp> <label>"
 format-padding = 1
@@ -542,7 +533,7 @@ ramp-3-foreground = ${colors.foreground}
 ramp-3 = ""
 ramp-4-foreground = ${colors.foreground}
 ramp-4 = ""
-ramp-5-foreground = #576657
+ramp-5-foreground = ${colors.dimgreen}
 ramp-5 = ""
 ramp-6-foreground = ${colors.green}
 ramp-6 = ""
@@ -565,7 +556,7 @@ label-warn-foreground = ${colors.urgent}
 [module/load]
 type = custom/script
 ;exec-if = load
-exec = /home/doug/bin/Loadavg
+exec = awk '{print $1" "$2" "$3}' < /proc/loadavg
 interval = 3
 format-prefix =
 format-prefix-foreground = ${colors.foreground}
@@ -613,10 +604,10 @@ label = " RAM:%percentage_used:3%% "
 ; Only applies if <bar-used> is used
 bar-used-indicator =
 bar-used-width = 6
-bar-used-foreground-0 = #576657
-bar-used-foreground-1 = #576657
-bar-used-foreground-2 = #2C912C
-bar-used-foreground-3 = ${colors.yellow}
+bar-used-foreground-0 = ${colors.dimgreen}
+bar-used-foreground-1 = ${colors.dimgreen}
+bar-used-foreground-2 = ${colors.dimyellow}
+bar-used-foreground-3 = ${colors.orange}
 bar-used-foreground-4 = ${colors.urgent}
 bar-used-fill = ▐
 bar-used-empty = ▐
@@ -701,7 +692,7 @@ animation-packetloss-framerate = 500
 [module/uptime]
 type = custom/script
 ;exec-if = uptime
-exec = /home/doug/bin/Uptime
+exec = uptime | awk -F, '{sub(".*up ",x,$1);print $1}'
 ;format-prefix = "  "
 format-prefix = " UP: "
 format-prefix-foreground = ${colors.foreground}
@@ -855,9 +846,10 @@ bar-capacity-empty = ▐
 bar-capacity-empty-foreground = #444444
 
 ramp-capacity-0 = 
+;ramp-capacity-0 = ⚠
 ramp-capacity-0-foreground = ${colors.urgent}
 ramp-capacity-1 = 
-ramp-capacity-1-foreground = ${colors.yellow}
+ramp-capacity-1-foreground = ${colors.orange}
 ramp-capacity-2 = 
 ramp-capacity-2-foreground = ${colors.dimyellow}
 ramp-capacity-3 = 
