--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,7 +1,7 @@
 unbind C-b
 set -g prefix C-q
 
-# 0 is too far from ` ;)
+# 0 is too far from `
 set -g base-index 1
 
 set -g default-shell "/bin/bash"
@@ -11,7 +11,14 @@ set -g default-shell "/bin/bash"
 set-window-option -g automatic-rename on
 set-option -g set-titles on
 
-set -g default-terminal screen-256color
+# set -g default-terminal "tmux-256color"
+set -g default-terminal "screen-256color"
+
+## update the TERM variable of terminal emulator when creating a new session or attaching a existing session
+set -g update-environment 'DISPLAY SSH_ASKPASS SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY TERM'
+## determine if we should enable 256-colour support
+if "[[ ${TERM} =~ 256color || ${TERM} == fbterm ]]" 'set -g default-terminal screen-256color'
+
 set -g status-keys vi
 set -g history-limit 10000
 
@@ -35,7 +42,7 @@ bind-key M-l resize-pane -R
 
 # Vim style pane selection
 bind Left select-pane -L
-bind Down select-pane -D 
+bind Down select-pane -D
 bind Up select-pane -U
 bind Right select-pane -R
 
@@ -56,15 +63,18 @@ set -sg escape-time 0
 bind r source-file ~/.tmux.conf
 
 set -g status-position bottom
-set -g status-bg "#2B2B2E"
-set -g status-fg "#B7B7B7"
+set -g status-bg "#303033"
+set -g status-fg "#B0B0BB"
 set -g status-interval 3
 set -g status-left-length 64
 set -g status-right-length 144
 
-set -g status-right '#[fg=#B39759]#(psuinfo -Cuca -N -S4)#[default]   #[fg=#B39759]#(/home/doug/bin/Loadavg)#[default]   #[fg=#B39759]#(/home/doug/bin/Batt0.sh)#[default]   #[fg=#B7B7B7]%k:%M#[default] '
+set -g status-right '#[fg=#7892DE]#(psuinfo -Cua -N -S4)#[default]   #[fg=#7892DE]#(/usr/local/bin/Loadavg)#[default]   #[fg=#B0B0BB]%k:%M#[default] '
 
-set -g pane-border-fg colour236
-set -g pane-active-border-fg colour236
-#set -g pane-border-bg colour236
-#set -g pane-active-border-bg colour236
+# Make active pane border blue
+set -g pane-active-border-style fg="#74737A"
+set -g pane-border-style fg="#74737A"
+
+
+
+
